# cli-chat-tool-in-rust

./: README.md
client-side/: .gitignore  Cargo.toml
client-side/src/domain/: account.rs  message.rs  mod.rs
client-side/src/infrastructure/: mod.rs  storage.rs
server/src/: main.rs
