[package]
name = "client-side"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
rusqlite = "0.30"
tokio-tungstenite = "0.21"
futures-util = "0.3"
ratatui = "0.26"
crossterm = "0.27"